--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Kadus Koer</a>
+                <a class="navbar-brand" href="/">Kadus Koer</a>
             </div>
             <div class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right" role="form">
@@ -38,7 +38,7 @@
                     <div class="form-group">
                         <input type="password" placeholder="Password" class="form-control">
                     </div>
-                    <button type="submit" class="btn btn-success">Sign in</button>
+                    <button type="submit" class="btn btn-success">Logi sisse</button>
                 </form>
             </div><!--/.navbar-collapse -->
         </div>
