--- a/app/views/lost/update.scala.html
+++ b/app/views/lost/update.scala.html
@@ -7,12 +7,40 @@
 
 @helper._flash(flash)
 
+<!-- Large modal -->
+
+
+<div class="modal fade bs-upload-modal" tabindex="-1" role="dialog" aria-labelledby="Upload picture" aria-hidden="true">
+    <div class="modal-dialog modal-med">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Pildi lisamine</h4>
+            </div>
+            <div class="modal-body">
+                @helper.form(action = routes.Lost.uploadImage( id ),
+                    'class->"form-horizontal", 'role->"form", 'id->"uploadForm", 'enctype->"multipart/form-data") {
+                    @helper.inputFile(field = lostForm("picture"), '_label -> "Looma foto", 'class->"form-control")
+                }
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Tagasi</button>
+                <button type="button" class="btn btn-primary" onclick="document.getElementById('uploadForm').submit()">Lisan</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="col-sm-6">
     @helper.form(action = routes.Lost.update( id ), 'class->"form-horizontal", 'role->"form") {
         @_form(lostForm){
-            <button type="submit" class="btn btn-default">Uuenda</button>
+            <input type="submit" value="Uuenda" class="btn btn-default"/>
+            <a href="#" class="btn btn-default" data-toggle="modal" data-target=".bs-upload-modal">Lisa pilt</a>
         }
     }
 </div>
+
+
 
 }
